--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
   flutter_dotenv: ^5.2.1
+  provider: ^6.1.1
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
