--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   provider: ^6.1.1
   google_sign_in: ^6.1.5
+  flutter_map: ^8.1.1
 
 dev_dependencies:
   flutter_test:
