--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^6.1.1
   google_sign_in: ^6.1.5
   flutter_map: ^8.1.1
+  http: ^1.4.0
+  geolocator: ^14.0.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
