--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.4.0
   geolocator: ^14.0.1
   shared_preferences: ^2.5.3
+  firebase_database: ^11.3.6
 
 dev_dependencies:
   flutter_test:
