--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   latlong2: ^0.9.1
   supabase_flutter: ^2.9.0
   image_picker: ^1.1.0
+  flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
   flutter_test:
