--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.1.0
   flutter_local_notifications: ^19.2.1
   intl: ^0.20.2
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
